<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:gravity="center">

    <LinearLayout
        android:id="@+id/horizontal_date_picker_locator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/description_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity=""
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/day_of_the_month_selector"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/picker_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/month_selector"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/picker_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/year_selector"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/picker_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expense_error_hint"
        android:layout_marginBottom="10dp"
        android:textColor="#ff0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/description_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/description_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/expense_description_hint"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toTopOf="@+id/decimalValueSetter"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_date_picker_locator"
        tools:layout_editor_absoluteX="80dp" />
    <EditText
        android:id="@+id/decimalValueSetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:gravity="center"
        android:hint="@string/decimal_value_uah"
        android:inputType="numberDecimal"
        android:minWidth="90dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/apply_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_title"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_expense_apply_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decimalValueSetter" />
</androidx.constraintlayout.widget.ConstraintLayout>
